manifest file changes

--- a/ci/credentials-local.yml
+++ b/ci/credentials-local.yml
@@ -1,7 +1,7 @@
-deploy-username: user
-deploy-password: pass
-pws-organization: pcfdev-org
-pws-staging-space: pcfdev-space
+deploy-username: rajees.friends@gmail.com
+deploy-password: Jan@2019
+pws-organization: RajiMohan
+pws-staging-space: development
 pws-production-space: pcfdev-space
-pws-api: http://api.local.pcfdev.io
-skip-cert: true
+pws-api: https://api.run.pivotal.io
+skip-cert: false
