git branch changes

--- a/ci/credentials-local.yml
+++ b/ci/credentials-local.yml
@@ -1,7 +1,7 @@
-deploy-username: rajees.friends@gmail.com
-deploy-password: Jan@2019
-pws-organization: RajiMohan
-pws-staging-space: development
+deploy-username: xxxxxxx
+deploy-password: xxxxxxx
+pws-organization: xxxxxx
+pws-staging-space: xxxxxx
 pws-production-space: pcfdev-space
 pws-api: https://api.run.pivotal.io
 skip-cert: false
